hphp/hack/test/typecheck/expression_trees/assign.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): void {
  $assign = ExampleDsl`(int $x): ExampleVoid ==> { $y = $x; }`;
}
